fix ip5 overflow

--- a/src/app/components/app.component.css
+++ b/src/app/components/app.component.css
@@ -78,6 +78,6 @@
 		display: none;
 	}
     .social-media {
-      margin: 0 32px;
+      margin: 0 7%;
     }
 }
